fix: Fix all unit tests, security issues, and test infrastructure
- Fix EPI Calculator tests to use EPIResult object
- Fix test fixtures for risk assessments
- Replace SHA-256 with bcrypt for password hashing
- Add TRUST_SIGNING_KEY to environment configuration
- Add Flask client fixtures for integration tests
- Update requirements.txt with bcrypt
- All 17 unit tests now passing
- Security: bcrypt password hashing implemented
- Security: HMAC signing key configurable via env

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,10 @@
 # Get from: https://platform.openai.com/api-keys
 OPENAI_API_KEY=
 
+# Trust Stack Signing Key (REQUIRED for cryptographic signatures)
+# Generate with: python -c "import secrets; print(secrets.token_urlsafe(32))"
+TRUST_SIGNING_KEY=
+
 # ═══════════════════════════════════════════════════════
 # REVENUE GENERATION APIs
 # ═══════════════════════════════════════════════════════
