--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,7 @@ flake8>=6.1.0
 
 # Trust Stack Dependencies
 cryptography>=41.0.0
+bcrypt>=4.0.0
 
 # AI/LLM Integration (optional - install separately if needed)
 # transformers>=4.35.0
