fix: Resolve all critical security issues for OpenZeppelin audit
CRITICAL FIXES:
- JWT secret key now requires environment variable (no regeneration)
- HMAC signing key validation (no default fallback)
- bcrypt work factor configuration (12 rounds default)
- Database-backed API key storage with bcrypt hashing
- Token blacklist for JWT revocation
- Proper key expiration and revocation

Security improvements:
- API keys persisted in database (not memory)
- All cryptographic keys must be explicitly configured
- No hardcoded defaults in production
- Audit-ready implementation

Addresses OpenZeppelin audit requirements.

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,14 @@ OPENAI_API_KEY=
 # Generate with: python -c "import secrets; print(secrets.token_urlsafe(32))"
 TRUST_SIGNING_KEY=
 
+# JWT Secret Key (REQUIRED for authentication)
+# Generate with: python -c "import secrets; print(secrets.token_urlsafe(32))"
+JWT_SECRET_KEY=
+
+# bcrypt Work Factor (Optional - Default: 12, Range: 10-14)
+# Higher = more secure but slower. 12 is recommended for production.
+BCRYPT_ROUNDS=12
+
 # ═══════════════════════════════════════════════════════
 # REVENUE GENERATION APIs
 # ═══════════════════════════════════════════════════════
